--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "ts-node-dev --respawn --transpileOnly ./app/app.ts",
+    "prod": "tsc && node ./build/app.js"
   },
   "keywords": [
     "node",
@@ -16,6 +18,7 @@
   "dependencies": {
     "@types/express": "^4.16.1",
     "express": "^4.16.4",
+    "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^3.4.1"
   }
 }
