--- a/package.json
+++ b/package.json
@@ -16,8 +16,18 @@
   "author": "Auugsto Lucianetti",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
+    "@types/swagger-jsdoc": "0.0.2",
+    "@types/swagger-ui-express": "^3.0.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-load": "^1.1.16",
+    "nconf": "^0.10.0",
+    "os": "^0.1.1",
+    "swagger-jsdoc": "^3.2.8",
+    "swagger-ui-express": "^4.0.2",
     "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^3.4.1"
   }
